--- a/ansible/roles/superset/templates/docker-compose.yml.j2
+++ b/ansible/roles/superset/templates/docker-compose.yml.j2
@@ -14,7 +14,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-x-superset-image: &superset-image apachesuperset.docker.scarf.sh/apache/superset:2.1.0
+x-superset-image: &superset-image apachesuperset.docker.scarf.sh/apache/superset:3.0.2
 x-superset-depends-on: &superset-depends-on
   - db
   - redis
@@ -91,3 +91,11 @@ services:
     volumes: *superset-volumes
     healthcheck:
       disable: true
+
+volumes:
+  superset_home:
+    external: false
+  db_home:
+    external: false
+  redis:
+    external: false
