--- a/ansible/roles/nifi/templates/nifi.service.j2
+++ b/ansible/roles/nifi/templates/nifi.service.j2
@@ -9,8 +9,11 @@ User=root
 Group=root
 LimitNOFILE=65535
 LimitNPROC=65535
+Environment="JAVA_HOME=/usr/lib/jvm/java-11-openjdk"
 ExecStart={{ nifi.home_dir }}/bin/nifi.sh run
 ExecStop={{ nifi.home_dir }}/bin/nifi.sh stop
+Restart=on-failure
+RestartSec=5s
 
 [Install]
 WantedBy=multi-user.target
