--- a/ansible/roles/nifi-cluster/templates/nifi.properties.j2
+++ b/ansible/roles/nifi-cluster/templates/nifi.properties.j2
@@ -50,7 +50,7 @@ nifi.state.management.provider.local=local-provider
 # The ID of the cluster-wide state provider. This will be ignored if NiFi is not clustered but must be populated if running in a cluster.
 nifi.state.management.provider.cluster=zk-provider
 # Specifies whether or not this instance of NiFi should run an embedded ZooKeeper server
-nifi.state.management.embedded.zookeeper.start=false
+nifi.state.management.embedded.zookeeper.start={{ nifi.cluster.zk.embedded }}
 # Properties file that provides the ZooKeeper properties to use if <nifi.state.management.embedded.zookeeper.start> is set to true
 nifi.state.management.embedded.zookeeper.properties=./conf/zookeeper.properties
 
@@ -256,19 +256,19 @@ nifi.listener.bootstrap.port=0
 # cluster common properties (all nodes must have same values) #
 nifi.cluster.protocol.heartbeat.interval=5 sec
 nifi.cluster.protocol.heartbeat.missable.max=8
-nifi.cluster.protocol.is.secure=false
+nifi.cluster.protocol.is.secure={{ nifi.cluster.enabled }}
 
 # cluster node properties (only configure for cluster nodes) #
-nifi.cluster.is.node=false
-nifi.cluster.node.address=
-nifi.cluster.node.protocol.port=
+nifi.cluster.is.node={{ nifi.cluster.enabled }}
+nifi.cluster.node.address={{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}
+nifi.cluster.node.protocol.port={{ nifi.cluster.protocol_port }}
 nifi.cluster.node.protocol.max.threads=50
 nifi.cluster.node.event.history.size=25
 nifi.cluster.node.connection.timeout=5 sec
 nifi.cluster.node.read.timeout=5 sec
 nifi.cluster.node.max.concurrent.requests=100
 nifi.cluster.firewall.file=
-nifi.cluster.flow.election.max.wait.time=5 mins
+nifi.cluster.flow.election.max.wait.time={{ nifi.cluster.flow_election_max_wait_time }}
 nifi.cluster.flow.election.max.candidates=
 
 # cluster load balancing properties #
@@ -279,17 +279,17 @@ nifi.cluster.load.balance.max.thread.count=8
 nifi.cluster.load.balance.comms.timeout=30 sec
 
 # zookeeper properties, used for cluster management #
-nifi.zookeeper.connect.string=
+nifi.zookeeper.connect.string={{ nifi.cluster.zk.connect }}
 nifi.zookeeper.connect.timeout=10 secs
 nifi.zookeeper.session.timeout=10 secs
 nifi.zookeeper.root.node=/nifi
 nifi.zookeeper.client.secure=false
-nifi.zookeeper.security.keystore=
-nifi.zookeeper.security.keystoreType=
-nifi.zookeeper.security.keystorePasswd=
-nifi.zookeeper.security.truststore=
-nifi.zookeeper.security.truststoreType=
-nifi.zookeeper.security.truststorePasswd=
+nifi.zookeeper.security.keystore={{ nifi.ca.cert_dir }}/keystore.p12
+nifi.zookeeper.security.keystoreType=PKCS12
+nifi.zookeeper.security.keystorePasswd={{ nifi.ca.key_passwd }}
+nifi.zookeeper.security.truststore={{ nifi.ca.trust_dir }}/nifi-trust.p12
+nifi.zookeeper.security.truststoreType=PKCS12
+nifi.zookeeper.security.truststorePasswd={{ nifi.ca.trust_dir }}/nifi-trust.p12
 nifi.zookeeper.jute.maxbuffer=
 
 # Zookeeper properties for the authentication scheme used when creating acls on znodes used for cluster management
