mysql8: 修复主从部署时的 bug

--- a/ansible/roles/mysql8/templates/my.cnf.j2
+++ b/ansible/roles/mysql8/templates/my.cnf.j2
@@ -34,3 +34,4 @@ max_connections = 2000
 max_connect_errors = 10000
 # innodb_buffer_pool_size = {{ mysql8.innodb_buffer_pool_size }}
 skip-name-resolve
+log_bin_trust_function_creators = 1
